mehod for getting wall themes
